Solucion de la ruta para el servidor

--- a/inde.html
+++ b/inde.html
@@ -6,7 +6,7 @@
    <!-- <link rel="stylesheet" href="/css/materialize.css"> -->
    <!--  <link rel="stylesheet" href="/css/materialize.min.css"> -->
    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Project Headphones</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="container_all">
             <div class="container_menu">
                 <input type="checkbox" id="btn-menu">
-                <label for="btn-menu"><img  class="icon" src="/img/Botonmenu/bx-menu-alt-left.svg" alt=""></label>
+                <label for="btn-menu"><img  class="icon" src="img/Botonmenu/bx-menu-alt-left.svg" alt=""></label>
                 <nav class="menu">
                     <ul>
                         <li class="iten_logo"><a href="">Phono</a></li>
@@ -36,7 +36,7 @@
                     </button>                
                 </div>
                 <div class="img_main">
-                    <img src="/img/Banner/showcase.jpg" alt="">
+                    <img src="img/Banner/showcase.jpg" alt="">
                 </div>
             </div>
         </div>
