configuracion completa del responsive desing parte hero

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
             <div class="container_main">
                 <div class="text_main">
-                    <h1 class="maintext">The headphones of the future.</h1>
+                    <h1 class="maintext">The <br>headphones <br class="break"> of the <br class="apart">future.</h1>
                     <h2 class="secondtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Quo repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum commodi 
-                        placeat ea itaque modi corrupti corporis nam voluptas aut reprehenderit eaque 
-                        culpa.</h2>
+                        Quo repudiandae rerum libero ipsum <span class="separate"> asperiores omnis mollitia, nostrum commodi 
+                        placeat ea itaque modi corrupti corporis nam voluptas aut reprehenderit eaque
+                        culpa.</span></h2>
                     <button class="btn">
-                        <a href="#">Read More</a>
+                        <a href="#">Read More...</a>
                     </button>                
                 </div>
                 <div class="img_main">
@@ -40,7 +40,8 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header>   
+
     
 </body>
 </html>
