Configuracion del section abou y parte de galery

--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
         </div>
     </header>   
 
+    <main>
+        <section class="about">
+            <div class="container">
+                <h3 class="text1">Loud & Clear</h3>
+                <h2 class="text2">People Aren't Hearing 
+                    All the Music
+                </h2>
+                <p class="text3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto accusamus in eaque ut <span class="tex"> asperiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quos quis atque, nesciunt et maxime? explicabo?</span></p>
+            </div>
+        </section>
+        <section class="galery">
+            <div class="container_galery">
+                <div class="box">
+                    <img class="main" src="/img/Galery/gal2323.jpg" alt="">
+                </div>
+                <div class="box">
+                    <div class="p1"><img class="im1" src="/img/Galery/gal39834.jpg" alt=""></div>
+                    <div class="p2"><img class="im2" src="/img/Galery/gal4958.jpg" alt=""></div>
+                    <div class="p3"><img class="im3" src="/img/Galery/gal4545.jpg" alt=""></div>
+                </div>
+                <div class="box">
+                    <div class="up"><img class="up1" src="/img/Galery/gal43884.jpg" alt=""></div>
+                    <div class="up"><img class="up2" src="/img/Galery/gal74744.jpg" alt=""></div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     
 </body>
 </html>
