Configuracion de rutas para las imagenes

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
         <section class="galery">
             <div class="container_galery">
                 <div class="box">
-                    <img class="main" src="/img/Galery/gal2323.jpg" alt="">
+                    <img class="main" src="img/Galery/gal2323.jpg" alt="">
                 </div>
                 <div class="box">
-                    <div class="p1"><img class="im1" src="/img/Galery/gal39834.jpg" alt=""></div>
-                    <div class="p2"><img class="im2" src="/img/Galery/gal4958.jpg" alt=""></div>
-                    <div class="p3"><img class="im3" src="/img/Galery/gal4545.jpg" alt=""></div>
+                    <div class="p1"><img class="im1" src="img/Galery/gal39834.jpg" alt=""></div>
+                    <div class="p2"><img class="im2" src="img/Galery/gal4958.jpg" alt=""></div>
+                    <div class="p3"><img class="im3" src="img/Galery/gal4545.jpg" alt=""></div>
                 </div>
                 <div class="box">
-                    <div class="up"><img class="up1" src="/img/Galery/gal43884.jpg" alt=""></div>
-                    <div class="up"><img class="up2" src="/img/Galery/gal74744.jpg" alt=""></div>
+                    <div class="up"><img class="up1" src="img/Galery/gal43884.jpg" alt=""></div>
+                    <div class="up"><img class="up2" src="img/Galery/gal74744.jpg" alt=""></div>
                 </div>
             </div>
         </section>
