Configuracion de section galery y inicio de contact

--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
                 </div>
             </div>
         </section>
+        <section class="contact">
+            <div class="container_contact">
+                <div class="conta_box">Lorem ipsum dolor sit.</div>
+                <div class="conta_box">
+                    Company Info
+                    All Products
+                    About Us
+                    Privacy Policy
+                    Terms of Service
+                </div>
+                <div class="conta_box">
+                    Blog Posts
+                    Lorem ipsum dolor.
+                    Lorem ipsum dolor.
+                    Lorem ipsum dolor.
+                    Lorem ipsum dolor.
+                </div>
+                <div class="conta_box">Subscribe
+                    Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit.
+                    <input type="text">
+                </div>
+            </div>
+        </section>
     </main>
 
     
