Configuracion modo mobile section contact

--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
         </section>
         <section class="contact">
             <div class="container_contact">
-                <div class="conta_box">Lorem ipsum dolor sit.</div>
-                <div class="conta_box">
+                <div class="conta_box box1">Lorem ipsum dolor sit.</div>
+                <div class="conta_box box2">
                     Company Info
                     All Products
                     About Us
                     Privacy Policy
                     Terms of Service
                 </div>
-                <div class="conta_box">
+                <div class="conta_box box3">
                     Blog Posts
                     Lorem ipsum dolor.
                     Lorem ipsum dolor.
                     Lorem ipsum dolor.
                     Lorem ipsum dolor.
                 </div>
-                <div class="conta_box">Subscribe
+                <div class="conta_box box4"><span class="espace">Subscribe</span>
                     Lorem ipsum dolor sit amet
                     consectetur adipisicing elit.
-                    <input type="text">
+                    <input type="text" class="input" value="E-mail">
                 </div>
             </div>
         </section>
