culminacion de section contac modo mobil

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="conta_box box4"><span class="espace">Subscribe</span>
                     Lorem ipsum dolor sit amet
                     consectetur adipisicing elit.
-                    <input type="text" class="input" value="E-mail">
+                    <input type="text" class="input" value="E-mail"><button class="button_conta">Enviar</button>
                 </div>
             </div>
         </section>
