--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     Lorem ipsum dolor.
                     Lorem ipsum dolor.
                 </div>
-                <div class="conta_box box4"><span class="espace">Subscribe</span>
+                <div class="conta_box box4"><span class="espace">Subcribe</span>
                     Lorem ipsum dolor sit amet
                     consectetur adipisicing elit.
                     <input type="text" class="input" value="E-mail"><button class="button_conta">Enviar</button>
