--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
         </section>
     </main>
 
+    <footer>
+        <div class="footer">
+            <h2>© Diegu <span>{</span> developer |  PROYECTO HEADPHONES  </h2>
+        </div>
+    </footer>
+
     
 </body>
 </html>
