detalles del footer modo mobil

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <footer>
         <div class="footer">
-            <h2>© Diegu <span>{</span> developer |  PROYECTO HEADPHONES</h2>
+            <h2>© Diegu <span>{</span> developer |  <span class="ph">PROYECTO HEADPHONES</span></h2>
         </div>
     </footer>
 
